--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ keywords = ["desktop", "shortcut", "removal", "automation"]
 [dependencies]
 chrono = "0.4.42"
 dirs = "6.0.0"
+notify = "8.2.0"
 tasklet = "0.2.9"
 tokio = "1.48.0"
